--- a/Library.UnitTest/Library.UnitTest.csproj
+++ b/Library.UnitTest/Library.UnitTest.csproj
@@ -34,6 +34,17 @@
     <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
     <BaseAddress>4194304</BaseAddress>
     <PlatformTarget>AnyCPU</PlatformTarget>
+    <UnitTestInformation>
+      <UnitTestInformation>
+        <Test Path="UnitTest/UnitTest">
+          <Options EnableFilter="True" Exclude="True" ctype="NUnitCategoryOptions">
+            <Categories>
+              <Category>Benchmark</Category>
+            </Categories>
+          </Options>
+        </Test>
+      </UnitTestInformation>
+    </UnitTestInformation>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>none</DebugType>
