--- a/Library.Security/Library.Security.csproj
+++ b/Library.Security/Library.Security.csproj
@@ -61,7 +61,11 @@
     <Compile Include="Mining\CashAlgorithm.cs" />
     <Compile Include="Hash\HmacSha256.cs" />
     <Compile Include="Mining\ICash.cs" />
+    <Compile Include="Mining\ImmutableWarrantItemBase.cs" />
+    <Compile Include="Mining\ImmutableCashItemBase.cs" />
     <Compile Include="Mining\Miner.cs" />
+    <Compile Include="Mining\MutableWarrantItemBase.cs" />
+    <Compile Include="Mining\MutableCashItemBase.cs" />
     <Compile Include="Utilities\EqualityComparer.cs" />
     <Compile Include="Exchange\ExchangePrivateKey.cs" />
     <Compile Include="Exchange\ExchangePublicKey.cs" />
