--- a/Library.Net.Covenant/Library.Net.Covenant.csproj
+++ b/Library.Net.Covenant/Library.Net.Covenant.csproj
@@ -65,25 +65,35 @@
     <Compile Include="Cache\Key\KeyCollection.cs" />
     <Compile Include="Cache\Metadata\MetadataCollection.cs" />
     <Compile Include="Cache\_Interface\Location\ILocation.cs" />
-    <Compile Include="Information\Message\BroadcastMessage.cs" />
-    <Compile Include="Information\_Interface\IBroadcastContent.cs" />
     <Compile Include="Cache\Metadata\Metadata.cs" />
     <Compile Include="Cache\_Interface\Metadata\IMetadata.cs" />
     <Compile Include="Cache\_Interface\IComputeHash.cs" />
+    <Compile Include="Cache\_Interface\Metadata\IQueryMetadata.cs" />
+    <Compile Include="ClientManager.cs" />
     <Compile Include="ConnectionsManager.cs" />
+    <Compile Include="Information\Link\Link.cs" />
+    <Compile Include="Information\Link\LinkCollection.cs" />
+    <Compile Include="Information\Store\Box.cs" />
+    <Compile Include="Information\Store\BoxCollection.cs" />
+    <Compile Include="Information\Store\Seed.cs" />
+    <Compile Include="Information\Store\SeedCollection.cs" />
+    <Compile Include="Information\Store\Store.cs" />
+    <Compile Include="Information\Store\StoreCollection.cs" />
+    <Compile Include="Information\_Interface\Link\ILink.cs" />
+    <Compile Include="Information\_Interface\Store\IBox.cs" />
+    <Compile Include="Information\_Interface\Store\ISeed.cs" />
+    <Compile Include="Information\_Interface\Store\IStore.cs" />
     <Compile Include="MessagesManager.cs" />
-    <Compile Include="Trust\Profile\ProfileCollection.cs" />
-    <Compile Include="Trust\Profile\Profile.cs" />
     <Compile Include="Cache\_Interface\HashAlgorithm.cs" />
     <Compile Include="Cache\_Interface\Key\IKey.cs" />
     <Compile Include="Cache\Location\Location.cs" />
     <Compile Include="Cache\Location\LocationCollection.cs" />
-    <Compile Include="Trust\_Interface\Profile\IQueryProfile.cs" />
-    <Compile Include="Trust\_Query\QueryProfile.cs" />
-    <Compile Include="Trust\_Query\QueryProfileCollection.cs" />
+    <Compile Include="Cache\Metadata\QueryMetadata.cs" />
+    <Compile Include="Cache\Metadata\QueryMetadataCollection.cs" />
     <Compile Include="CovenantConverter.cs" />
     <Compile Include="ConnectionManager.cs" />
-    <Compile Include="Trust\_Interface\Profile\IProfile.cs" />
+    <Compile Include="ProtocolType.cs" />
+    <Compile Include="ServerManager.cs" />
     <Compile Include="Utilities\EqualityComparer.cs" />
     <Compile Include="Utilities\ItemUtilities.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
