--- a/Library.Net.Covenant/Library.Net.Covenant.csproj
+++ b/Library.Net.Covenant/Library.Net.Covenant.csproj
@@ -61,47 +61,52 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Cache\Key\Key.cs" />
-    <Compile Include="Cache\Key\KeyCollection.cs" />
-    <Compile Include="Cache\Metadata\MetadataCollection.cs" />
-    <Compile Include="Cache\_Interface\Location\ILocation.cs" />
-    <Compile Include="Cache\Metadata\Metadata.cs" />
-    <Compile Include="Cache\_Interface\Metadata\IMetadata.cs" />
-    <Compile Include="Cache\_Interface\IComputeHash.cs" />
-    <Compile Include="Cache\_Interface\Metadata\IQueryMetadata.cs" />
-    <Compile Include="ClientManager.cs" />
-    <Compile Include="ConnectionsManager.cs" />
-    <Compile Include="Information\Link\Link.cs" />
-    <Compile Include="Information\Link\LinkCollection.cs" />
-    <Compile Include="Information\Store\Box.cs" />
-    <Compile Include="Information\Store\BoxCollection.cs" />
-    <Compile Include="Information\Store\Seed.cs" />
-    <Compile Include="Information\Store\SeedCollection.cs" />
-    <Compile Include="Information\Store\Store.cs" />
-    <Compile Include="Information\Store\StoreCollection.cs" />
-    <Compile Include="Information\_Interface\Link\ILink.cs" />
-    <Compile Include="Information\_Interface\Store\IBox.cs" />
-    <Compile Include="Information\_Interface\Store\ISeed.cs" />
-    <Compile Include="Information\_Interface\Store\IStore.cs" />
-    <Compile Include="MessagesManager.cs" />
-    <Compile Include="Cache\_Interface\HashAlgorithm.cs" />
-    <Compile Include="Cache\_Interface\Key\IKey.cs" />
-    <Compile Include="Cache\Location\Location.cs" />
-    <Compile Include="Cache\Location\LocationCollection.cs" />
-    <Compile Include="Cache\Metadata\QueryMetadata.cs" />
-    <Compile Include="Cache\Metadata\QueryMetadataCollection.cs" />
+    <Compile Include="Exchange\ExchangeProtocolVersion.cs" />
+    <Compile Include="Exchange\Information\Bitmap\Bitmap.cs" />
+    <Compile Include="Exchange\Information\Index\Index.cs" />
+    <Compile Include="Exchange\Information\_Interface\Bitmap\IBitmap.cs" />
+    <Compile Include="Exchange\Information\_Interface\Index\IIndex.cs" />
+    <Compile Include="Search\Cache\Key\Key.cs" />
+    <Compile Include="Search\Cache\Key\KeyCollection.cs" />
+    <Compile Include="Search\Cache\Metadata\MetadataCollection.cs" />
+    <Compile Include="Search\Cache\_Interface\Location\ILocation.cs" />
+    <Compile Include="Search\Cache\Metadata\Metadata.cs" />
+    <Compile Include="Search\Cache\_Interface\Metadata\IMetadata.cs" />
+    <Compile Include="Exchange\Information\_Interface\IComputeHash.cs" />
+    <Compile Include="Search\Cache\_Interface\Metadata\IQueryMetadata.cs" />
+    <Compile Include="Search\ConnectionsManager.cs" />
+    <Compile Include="Exchange\ContentOptions.cs" />
+    <Compile Include="Exchange\ExchangeItem.cs" />
+    <Compile Include="Exchange\ExchangeManager.cs" />
+    <Compile Include="Exchange\ContentManager.cs" />
+    <Compile Include="Search\Information\Link\Link.cs" />
+    <Compile Include="Search\Information\Link\LinkCollection.cs" />
+    <Compile Include="Search\Information\Store\Box.cs" />
+    <Compile Include="Search\Information\Store\BoxCollection.cs" />
+    <Compile Include="Search\Information\Store\Seed.cs" />
+    <Compile Include="Search\Information\Store\SeedCollection.cs" />
+    <Compile Include="Search\Information\Store\Store.cs" />
+    <Compile Include="Search\Information\Store\StoreCollection.cs" />
+    <Compile Include="Search\Information\_Interface\Link\ILink.cs" />
+    <Compile Include="Search\Information\_Interface\Store\IBox.cs" />
+    <Compile Include="Search\Information\_Interface\Store\ISeed.cs" />
+    <Compile Include="Search\Information\_Interface\Store\IStore.cs" />
+    <Compile Include="Search\MessagesManager.cs" />
+    <Compile Include="Search\Cache\_Interface\HashAlgorithm.cs" />
+    <Compile Include="Search\Cache\_Interface\Key\IKey.cs" />
+    <Compile Include="Search\Cache\Location\Location.cs" />
+    <Compile Include="Search\Cache\Location\LocationCollection.cs" />
+    <Compile Include="Search\Cache\Metadata\QueryMetadata.cs" />
+    <Compile Include="Search\Cache\Metadata\QueryMetadataCollection.cs" />
     <Compile Include="CovenantConverter.cs" />
-    <Compile Include="ConnectionManager.cs" />
-    <Compile Include="ProtocolType.cs" />
-    <Compile Include="ServerManager.cs" />
+    <Compile Include="Search\ConnectionManager.cs" />
     <Compile Include="Utilities\CountManager.cs" />
     <Compile Include="Utilities\EqualityComparer.cs" />
     <Compile Include="Utilities\ItemUtilities.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="NodeCollection.cs" />
-    <Compile Include="Node.cs" />
-    <Compile Include="ProtocolVersion.cs" />
-    <Compile Include="UriCollection.cs" />
+    <Compile Include="Search\NodeCollection.cs" />
+    <Compile Include="Search\Node.cs" />
+    <Compile Include="Search\UriCollection.cs" />
     <Compile Include="Utilities\WatchTimer.cs" />
   </ItemGroup>
   <ItemGroup>
