--- a/Library.Net.Covenant/Library.Net.Covenant.csproj
+++ b/Library.Net.Covenant/Library.Net.Covenant.csproj
@@ -61,11 +61,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Exchange\ExchangeProtocolVersion.cs" />
     <Compile Include="Exchange\Information\Bitmap\Bitmap.cs" />
-    <Compile Include="Exchange\Information\Index\Index.cs" />
+    <Compile Include="Exchange\Information\BlockInfo\BlockInfo.cs" />
     <Compile Include="Exchange\Information\_Interface\Bitmap\IBitmap.cs" />
-    <Compile Include="Exchange\Information\_Interface\Index\IIndex.cs" />
+    <Compile Include="Exchange\Information\_Interface\BlockInfo\IBlockInfo.cs" />
+    <Compile Include="Exchange\ExchangeConnectionManager.cs" />
+    <Compile Include="Exchange\ExchangeManager.cs" />
     <Compile Include="Search\Cache\Key\Key.cs" />
     <Compile Include="Search\Cache\Key\KeyCollection.cs" />
     <Compile Include="Search\Cache\Metadata\MetadataCollection.cs" />
@@ -74,10 +75,9 @@
     <Compile Include="Search\Cache\_Interface\Metadata\IMetadata.cs" />
     <Compile Include="Exchange\Information\_Interface\IComputeHash.cs" />
     <Compile Include="Search\Cache\_Interface\Metadata\IQueryMetadata.cs" />
-    <Compile Include="Search\ConnectionsManager.cs" />
+    <Compile Include="Search\SearchManager.cs" />
     <Compile Include="Exchange\ContentOptions.cs" />
     <Compile Include="Exchange\ExchangeItem.cs" />
-    <Compile Include="Exchange\ExchangeManager.cs" />
     <Compile Include="Exchange\ContentManager.cs" />
     <Compile Include="Search\Information\Link\Link.cs" />
     <Compile Include="Search\Information\Link\LinkCollection.cs" />
@@ -99,7 +99,7 @@
     <Compile Include="Search\Cache\Metadata\QueryMetadata.cs" />
     <Compile Include="Search\Cache\Metadata\QueryMetadataCollection.cs" />
     <Compile Include="CovenantConverter.cs" />
-    <Compile Include="Search\ConnectionManager.cs" />
+    <Compile Include="Search\SearchConnectionManager.cs" />
     <Compile Include="Utilities\CountManager.cs" />
     <Compile Include="Utilities\EqualityComparer.cs" />
     <Compile Include="Utilities\ItemUtilities.cs" />
