--- a/Library.Net.Covenant/Library.Net.Covenant.csproj
+++ b/Library.Net.Covenant/Library.Net.Covenant.csproj
@@ -61,14 +61,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Connection\ConnectDirection.cs" />
-    <Compile Include="Connection\EventHandlers.cs" />
     <Compile Include="Exchange\Information\Bitmap\Bitmap.cs" />
     <Compile Include="Exchange\Information\BlocksInfo\BlocksInfo.cs" />
+    <Compile Include="Exchange\Information\QueryBlocks\QueryBlocks.cs" />
+    <Compile Include="Exchange\Information\QueryBlocks\QueryBlocksCollection.cs" />
     <Compile Include="Exchange\Information\_Interface\Bitmap\IBitmap.cs" />
     <Compile Include="Exchange\Information\_Interface\BlocksInfo\IBlocksInfo.cs" />
-    <Compile Include="Connection\ExchangeConnectionManager.cs" />
-    <Compile Include="ExchangeManager.cs" />
+    <Compile Include="Exchange\ConnectionManager.cs" />
+    <Compile Include="Exchange\ExchangeManager.cs" />
+    <Compile Include="Exchange\Information\_Interface\QueryBlocks\IQueryBlocks.cs" />
     <Compile Include="Search\Cache\Key\Key.cs" />
     <Compile Include="Search\Cache\Key\KeyCollection.cs" />
     <Compile Include="Search\Cache\Metadata\MetadataCollection.cs" />
@@ -76,10 +77,10 @@
     <Compile Include="Search\Cache\Metadata\Metadata.cs" />
     <Compile Include="Search\Cache\_Interface\Metadata\IMetadata.cs" />
     <Compile Include="Exchange\Information\_Interface\IComputeHash.cs" />
-    <Compile Include="Search\Cache\_Interface\Metadata\IQueryMetadata.cs" />
-    <Compile Include="SearchManager.cs" />
+    <Compile Include="Search\Cache\_Interface\QueryMetadata\IQueryMetadata.cs" />
+    <Compile Include="Search\SearchManager.cs" />
     <Compile Include="Exchange\ContentOptions.cs" />
-    <Compile Include="ExchangeItem.cs" />
+    <Compile Include="Exchange\ExchangeItem.cs" />
     <Compile Include="Exchange\ContentManager.cs" />
     <Compile Include="Search\Information\Link\Link.cs" />
     <Compile Include="Search\Information\Link\LinkCollection.cs" />
@@ -93,15 +94,15 @@
     <Compile Include="Search\Information\_Interface\Store\IBox.cs" />
     <Compile Include="Search\Information\_Interface\Store\ISeed.cs" />
     <Compile Include="Search\Information\_Interface\Store\IStore.cs" />
-    <Compile Include="MessagesManager.cs" />
+    <Compile Include="Search\MessagesManager.cs" />
     <Compile Include="Search\Cache\_Interface\HashAlgorithm.cs" />
     <Compile Include="Search\Cache\_Interface\Key\IKey.cs" />
     <Compile Include="Search\Cache\Location\Location.cs" />
     <Compile Include="Search\Cache\Location\LocationCollection.cs" />
-    <Compile Include="Search\Cache\Metadata\QueryMetadata.cs" />
-    <Compile Include="Search\Cache\Metadata\QueryMetadataCollection.cs" />
+    <Compile Include="Search\Cache\QueryMetadata\QueryMetadata.cs" />
+    <Compile Include="Search\Cache\QueryMetadata\QueryMetadataCollection.cs" />
     <Compile Include="CovenantConverter.cs" />
-    <Compile Include="Connection\SearchConnectionManager.cs" />
+    <Compile Include="Search\ConnectionManager.cs" />
     <Compile Include="Utilities\CountManager.cs" />
     <Compile Include="Utilities\EqualityComparer.cs" />
     <Compile Include="Utilities\ItemUtilities.cs" />
