--- a/Library.Compression/Library.Compression.csproj
+++ b/Library.Compression/Library.Compression.csproj
@@ -80,10 +80,10 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Assemblies\Xz_x86.exe">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory Condition="'$(OS)'=='Windows'">Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Assemblies\Xz_x64.exe">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory Condition="'$(OS)'=='Windows'">Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <ItemGroup>
@@ -105,10 +105,10 @@
     <BaseAddress>4194304</BaseAddress>
     <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Windows)'=='true'">
+  <PropertyGroup Condition="'$(OS)'=='Windows'">
     <DefineConstants>$(DefineConstants);Windows</DefineConstants>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Linux)'=='true'">
+  <PropertyGroup Condition="'$(OS)'=='Linux'">
     <DefineConstants>$(DefineConstants);Linux</DefineConstants>
   </PropertyGroup>
 </Project>
