--- a/Library.Correction/Library.Correction.csproj
+++ b/Library.Correction/Library.Correction.csproj
@@ -70,19 +70,19 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assemblies\Library_Correction_x64.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory Condition="'$(OS)'=='Windows'">Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Assemblies\Library_Correction_x86.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory Condition="'$(OS)'=='Windows'">Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Properties\Library.Correction.License">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Assemblies\Library_Correction_x64.so">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory Condition="'$(OS)'=='Linux'">Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Assemblies\Library_Correction_x86.so">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory Condition="'$(OS)'=='Linux'">Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <ItemGroup>
@@ -104,10 +104,10 @@
     <BaseAddress>4194304</BaseAddress>
     <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Windows)'=='true'">
+  <PropertyGroup Condition="'$(OS)'=='Windows'">
     <DefineConstants>$(DefineConstants);Windows</DefineConstants>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Linux)'=='true'">
+  <PropertyGroup Condition="'$(OS)'=='Linux'">
     <DefineConstants>$(DefineConstants);Linux</DefineConstants>
   </PropertyGroup>
 </Project>
