--- a/Library.Security/Library.Security.csproj
+++ b/Library.Security/Library.Security.csproj
@@ -108,16 +108,16 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assemblies\Hashcash_x64.exe">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory Condition="'$(OS)'=='Windows'">Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Assemblies\Hashcash_x86.exe">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory Condition="'$(OS)'=='Windows'">Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Assemblies\Library_Security_x64.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory Condition="'$(OS)'=='Windows'">Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Assemblies\Library_Security_x86.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory Condition="'$(OS)'=='Windows'">Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Properties\Library.Security.License">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -126,10 +126,10 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Assemblies\Library_Security_x64.so">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory Condition="'$(OS)'=='Linux'">Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Assemblies\Library_Security_x86.so">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory Condition="'$(OS)'=='Linux'">Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
@@ -146,10 +146,10 @@
     <BaseAddress>4194304</BaseAddress>
     <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Windows)'=='true'">
+  <PropertyGroup Condition="'$(OS)'=='Windows'">
     <DefineConstants>$(DefineConstants);Windows</DefineConstants>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Linux)'=='true'">
+  <PropertyGroup Condition="'$(OS)'=='Linux'">
     <DefineConstants>$(DefineConstants);Linux</DefineConstants>
   </PropertyGroup>
 </Project>
