--- a/Library.Correction/Library.Correction.csproj
+++ b/Library.Correction/Library.Correction.csproj
@@ -79,10 +79,10 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Assemblies\Library_Correction_x64.so">
-      <CopyToOutputDirectory Condition="'$(OS)'=='Linux'">Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory Condition="'$(OS)'=='Unix'">Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Assemblies\Library_Correction_x86.so">
-      <CopyToOutputDirectory Condition="'$(OS)'=='Linux'">Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory Condition="'$(OS)'=='Unix'">Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <ItemGroup>
@@ -107,7 +107,7 @@
   <PropertyGroup Condition="'$(OS)'=='Windows'">
     <DefineConstants>$(DefineConstants);Windows</DefineConstants>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(OS)'=='Linux'">
-    <DefineConstants>$(DefineConstants);Linux</DefineConstants>
+  <PropertyGroup Condition="'$(OS)'=='Unix'">
+    <DefineConstants>$(DefineConstants);Unix</DefineConstants>
   </PropertyGroup>
 </Project>
