--- a/Library.Net.Outopos/Library.Net.Outopos.csproj
+++ b/Library.Net.Outopos/Library.Net.Outopos.csproj
@@ -106,8 +106,6 @@
     <Compile Include="ConnectionFilter.cs" />
     <Compile Include="ConnectionsManager.cs" />
     <Compile Include="UploadItem.cs" />
-    <Compile Include="Utilities\EqualityComparer.cs" />
-    <Compile Include="Utilities\ItemUtilities.cs" />
     <Compile Include="MessagesManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerManager.cs" />
@@ -115,7 +113,6 @@
     <Compile Include="Node.cs" />
     <Compile Include="UploadManager.cs" />
     <Compile Include="UriCollection.cs" />
-    <Compile Include="Utilities\WatchTimer.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Library.Collections\Library.Collections.csproj">
@@ -172,6 +169,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup />
+  <Import Project="..\Utilities\Utilities.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
