--- a/Library.UnitTest/Library.UnitTest.csproj
+++ b/Library.UnitTest/Library.UnitTest.csproj
@@ -61,6 +61,10 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="nunit.framework, Version=2.6.4.14350, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+      <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System">
     </Reference>
     <Reference Include="System.Core">
@@ -78,9 +82,6 @@
     </Reference>
     <Reference Include="System.Xml.Linq">
     </Reference>
-    <Reference Include="nunit.framework">
-      <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Benchmark\Benchmark_Equels.cs" />
@@ -89,6 +90,7 @@
     <Compile Include="Benchmark\Benchmark_Crc32_Castagnoli.cs" />
     <Compile Include="Benchmark\Benchmark.cs" />
     <Compile Include="Benchmark\Benchmark_Xor.cs" />
+    <Compile Include="Test_Library_Utilities.cs" />
     <Compile Include="Test_Library_Net_Outopos.cs" />
     <Compile Include="Test_Library_Compression.cs" />
     <Compile Include="Utilities\T_Crc32_Castagnoli.cs" />
@@ -166,11 +168,12 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <Import Project="..\Library.Utilities\Library.Utilities.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
