--- a/Library.Configuration/Library.Configuration.csproj
+++ b/Library.Configuration/Library.Configuration.csproj
@@ -49,6 +49,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\Amoeba\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
@@ -77,13 +81,16 @@
       <Name>Library.Collections</Name>
     </ProjectReference>
     <ProjectReference Include="..\Library.Io\Library.Io.csproj">
-      <Project>{74597E45-7F3C-4958-8B6A-B16DE8DE47B9}</Project>
+      <Project>{74597e45-7f3c-4958-8b6a-b16de8de47b9}</Project>
       <Name>Library.Io</Name>
     </ProjectReference>
     <ProjectReference Include="..\Library\Library.csproj">
       <Project>{63EADC1F-9A8A-4945-A562-DA666D0BCB7B}</Project>
       <Name>Library</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
