--- a/Library.Net.I2p/Library.Net.I2p.csproj
+++ b/Library.Net.I2p/Library.Net.I2p.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SamBase.cs" />
     <Compile Include="SamManager.cs" />
+    <Compile Include="Utilities\SocketLineReader.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Properties\Library.Net.I2p.License">
