--- a/Library.Net.Proxy/Library.Net.Proxy.csproj
+++ b/Library.Net.Proxy/Library.Net.Proxy.csproj
@@ -52,9 +52,8 @@
     <Compile Include="HttpProxyClient.cs" />
     <Compile Include="ProxyClientBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Socks4aProxyClient.cs" />
-    <Compile Include="Socks4ProxyClient.cs" />
     <Compile Include="Socks5ProxyClient.cs" />
+    <Compile Include="Utilities\SocketLineReader.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Library\Library.csproj">
